fix quote section on mobile and tablet

--- a/style.css
+++ b/style.css
@@ -234,10 +234,10 @@ iframe {
 .quote-container {
   background-color: #744253;
   width: 100%;
-  height: 400px;
+  /* height: 400px; */
 }
 
-.quote {
+/* .quote {
   position: relative;
   top: 50px;
   padding-left: 50px;
@@ -247,9 +247,9 @@ iframe {
   color: white;
   font-style: italic;
   letter-spacing: 0.05em;
-}
+} */
 
-.name {
+/* .name {
   position: relative;
   top: 80px;
   padding-right: 50px;
@@ -259,6 +259,22 @@ iframe {
   font-style: italic;
   font-weight: bold;
   color: white;
+} */
+
+.quote {
+  color: white;
+  font-style: italic;
+  letter-spacing: 0.05em;
+  font-size: 1.5em;
+  padding: 2em;
+}
+
+.name {
+  color: white;
+  font-style: italic;
+  font-weight: bold;
+  padding: 0 2em 2em 0;
+  text-align: right;
 }
 
 .video-container {
@@ -344,10 +360,10 @@ footer {
 
 @media (max-width: 1080px) {
   /* QUOTE SECTION */
-  .quote-container {
+  /* .quote-container {
     height: 500px;
     
-  }
+  } */
   .mobile-only-image {
     visibility: hidden;
     display: none;
@@ -548,18 +564,19 @@ footer {
 
   /* QUOTE */
 
-  .quote-container {
+  /* .quote-container {
     height: 460px;
-  }
+  } */
 
-  .quote  {
+  /* .quote  {
     color: white;
     font-size: 20px;
     padding-top: 0;
   }
   .name {
     font-size: 15px;
-  }
+  } */
+
 
   /* CALL TO ACTION */
   .content {
